src/objects/SPE_CMKPITrend__c.object
<CustomObject>
    <fields>
        <fullName>ConsequenceManagement__c</fullName>
        <label>Consequence Management</label>
        <referenceTo>SPE_ConsequenceManagement__c</referenceTo>
        <relationshipLabel>CM KPI Trends</relationshipLabel>
        <relationshipName>CM_KPI_Trends</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>DateofExecution__c</fullName>
        <label>Date of Execution</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>KPIScore__c</fullName>
        <formula>TrackerValue__r.Score1__c</formula>
        <label>KPI Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SPETracker__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SPE Tracker</label>
        <referenceTo>SPE_SPETracker__c</referenceTo>
        <relationshipLabel>CM KPI Trends</relationshipLabel>
        <relationshipName>CM_KPI_Trends</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TrackerValue__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tracker Value</label>
        <referenceTo>SPE_TrackerValues__c</referenceTo>
        <relationshipLabel>CM KPI Trends</relationshipLabel>
        <relationshipName>CM_KPI_Trends</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>CM KPI Trend</label>
    <nameField>
        <displayFormat>KT-{0000}</displayFormat>
        <label>CM KPI Trend Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CM KPI Trends</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>